data/derived/comb/progs/unify/prog5693.ml.out
Characters 59-79:
  else digitsOfInt (n / 10) :: (n mod 10);;
       ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
